# procode

daily_service/spr_recog/: CMakeLists.txt  package.xml
daily_service/spr_recog/include/: recogfile.h
daily_service/spr_recog/src/: spr_recog.cpp
daily_service/spr_voice/: CMakeLists.txt  package.xml
daily_service/spr_voice/include/: APITools.hpp  SerialDevice.hpp  Zbase64.hpp  recogfile.h  viewer.hpp
daily_service/spr_voice/src/: spr_voice.cpp
daily_service/spr_voice/src/launch/: sapr.launch
daily_service/spr_voice/src/result/: theSpeechResult.txt
medicine_take/: CMakeLists.txt  package.xml
medicine_take/include/: Hokuyo.hpp  recogfile.h  tts.h
medicine_take/launch/: chat.launch  medicine_take.launch
medicine_take/src/: chat.cpp  level_1.cpp  medicine_take.cpp
search_missing_objects/indoor_navigation/: CMakeLists.txt  package.xml
search_missing_objects/indoor_navigation/src/: indoor_navigation.cpp  indoor_navigation1.cpp  indoor_navigation2.cpp
search_missing_objects/photoshot/: CMakeLists.txt  package.xml
search_missing_objects/photoshot/src/: photoshot.cpp
search_missing_objects/search_object/: CMakeLists.txt  package.xml
search_missing_objects/search_object/src/: answer.cpp  answer_class.cpp  answer_class2.cpp  answer_obj.cpp  answer_obj2.cpp
test/: CMakeLists.txt  package.xml
test/src/: me_test.cpp
